<resources>
    <string name="app_name">WalkWithMe</string>
    <string name="title_activity_settings">Settings</string>

    <string name="maps_activity_title">Localisation</string>
    <string name="profile_title">Profile</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_notifications_from_blocked_persons">Notifications from blocked forcomingAppointments</string>
    <string name="pref_show_notifications_from_blocked_persons">Show notificationDatas from blocked people
    </string>

    <string name="pref_title_display_name">Display username</string>
    <string name="pref_default_display_name">User</string>
    <string name="logout">Log out</string>

    <!--<string name="pref_title_add_friends_to_messages">Add friends to messages</string>-->
    <!--<string-array name="pref_example_list_titles">-->
    <!--<appointments_item>Always</appointments_item>-->
    <!--<appointments_item>When possible</appointments_item>-->
    <!--<appointments_item>Never</appointments_item>-->
    <!--</string-array>-->
    <!--<string-array name="pref_example_list_values">-->
    <!--<appointments_item>1</appointments_item>-->
    <!--<appointments_item>0</appointments_item>-->
    <!--<appointments_item>-1</appointments_item>-->
    <!--</string-array>-->

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_header_localisation">Localisation</string>
    <string name="pref_localisation">Your localisation</string>
    <string name="pref_edit_user">Edit user data</string>
    <string name="pref_log_out">Log out</string>
    <string name="not_set">Not set</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notificationDatas</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="spinner_entries">
        <item>Only your advertisements</item>
        <item>All advertisements</item>
        <item>Your friends advertisements</item>
    </string-array>

    <string-array name="spinner_privacy_entries">
        <item>All</item>
        <item>Friends</item>
        <item>Hide</item>
    </string-array>

</resources>
