<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.kacper.walkwithme.SettingsActivity.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.example.kacper.walkwithme.SettingsActivity.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.example.kacper.walkwithme.SettingsActivity.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

    <header
        android:fragment="com.example.kacper.walkwithme.SettingsActivity.SettingsActivity$MapsPreferenceFragment"
        android:icon="@drawable/ic_map"
        android:title="@string/pref_header_localisation" />

    <header
        android:fragment="com.example.kacper.walkwithme.SettingsActivity.SettingsActivity$ProfileFragment"
        android:icon="@drawable/person_icon_small_black"
        android:title="@string/profile_title" />

    <header
        android:id="@+id/logoutPreference"
        android:fragment="com.example.kacper.walkwithme.SettingsActivity.SettingsActivity$LogoutFragment"
        android:icon="@drawable/exit_icon"
        android:title="@string/logout" />

</preference-headers>
